--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,8 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: black;
+  /*color: rgb(var(--foreground-rgb));*/
   /*background: #f4f1de*/
   background: #fdf5e2;
   /*font-family: 'ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"';*/
